<resources>
    <string name="app_name">Coffeys Loyalty</string>
    <string name="title_activity_navigation_main_customers">NavigationMainCustomers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>



    <string name="api_map_key">AIzaSyBlM6LlZKIg9k5VjvWqEfAx43qOE0MZ1ew</string>
    <string name="menu_loyalty">Loyalty Card</string>
    <string name="menu_voucher">Vouchers</string>
    <string name="menu_chat">Chat to us</string>
    <string name="menu_products">Our Products</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_location">Location</string>
    <string name="menu_faq">FAQ</string>
    <string name="title_activity_navigation_main_owner">NavigationMainOwner</string>
    <string name="menu_scanner">Barcode Scanner</string>
    <string name="menu_customers">Customers Registered</string>

    <string name="remember">Remember Me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="passwordRepeat">Re-type Password</string>
    <string name="email">Email Address </string>
    <string name="welcome"> Welcome to Coffeys Butchers Loyalty. Please fill in the following fields to register an account.</string>
    <string name="cancel">Cancel</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="dob">Date of Birth</string>
    <string name="firstname">First Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Contact Number</string>
    <string name="username">Username</string>
    <string name="title_activity_home_page">home_page</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="forgotPasswordInfo">Please enter your email address associated with your account and we wil email you
        instructions to reset your password. </string>
    <string name="resetPassword">Reset Password</string>
    <string name="welcomeBack">Hello,</string>
    <string name="scan">Scan me!</string>
    <string name="loggingout">Logging you out. Thank you for using Coffeys Loyalty!</string>
    <string name="search">Search...</string>
    <string name="scannerWelcome">Please point the camera towards the QR Code.</string>
    <string name="voucher">You have a voucher! Select the voucher you wish to use and present in store for £5 off your purchase..</string>


    <string name="loyalty_welcome"> Check below to view your stamps!</string>
    <string name="about_us"> Coffeys Butchers situated on the Lisburn Road, Belfast was established in 1955. We offer unrivalled
        levels of customer service and satisfaction often envied by our competition and take great pride supplying our customers with
        only the finest locally sourced meat and meat products.

        All our beef is hand picked and dry aged on the bone to give it flavour,
        tenderness and quality guaranteed. We specialises in a wide range of wild game including venison from the Sperrin Mountains in Co Tyrone,
        pheasants from Newtonstewart, woodpigeon from Co Cavan, wild and farmed rabbit, guinea fowl and quail. It also has a full range of fruit
        and vegetables which are sourced as much as possible from local farms every day.</string>


    <string name="our_products">View our list of products below.</string>
    <string name="pork">Pork</string>
    <string name="beef">Beef</string>
    <string name="poultry">Poultry</string>
    <string name="lamb">Lamb</string>
    <string name="speciality_meats">Speciality Meats</string>
    <string name="cooked_products">Cooked Products</string>

    <string name="history">Check your history below!</string>

    <string name="voucher1">Voucher 1</string>
    <string name="voucher2">Voucher 2</string>
    <string name="voucher3">Voucher 3</string>
    <string name="voucher4">Voucher 4</string>
    <string name="voucher5">Voucher 5</string>
    <string name="voucher6">Voucher 6</string>
    <string name="voucher7">Voucher 7</string>
    <string name="voucher8">Voucher 8</string>
    <string name="voucher9">Voucher 9</string>
    <string name="voucher10">Voucher 10</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
