<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_loyalty_card"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_loyalty" />
        <item
            android:id="@+id/nav_voucher"
            android:icon="@drawable/ic_menu_voucher"
            android:title="@string/menu_voucher" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_our_products"
            android:icon="@drawable/ic_menu_products"
            android:title="@string/menu_products" />
    </group>

    <item android:title="More Information">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_about_us" />
            <item
                android:id="@+id/nav_location"
                android:icon="@drawable/ic_menu_location"
                android:title="@string/menu_location" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_menu_question"
                android:title="@string/menu_faq" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
