<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alicearmstrong.coffeysloyaltyprojectv1.RegisterScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:paddingTop="30dp"
            android:paddingStart="15dp"
            android:layout_weight="1.5"
            android:text="@string/welcome"
            android:textSize="15sp"
            android:typeface="monospace" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1.5"
            android:src="@mipmap/coffeyslogo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:paddingTop="12dp"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:weightSum="12"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="20"
                    android:padding="10dp"
                    android:hint="@string/firstname"
                    android:textColor="@color/gold"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:typeface="monospace"
                    android:inputType="textPersonName"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/etSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="20"
                    android:padding="10dp"
                    android:hint="@string/surname"
                    android:textColor="@color/gold"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:typeface="monospace"
                    android:inputType="textPersonName"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/btDOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onClickDate"
                    android:text="@string/dob"
                    android:background="@color/black"
                    android:paddingBottom="5dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold|italic"
                    android:typeface="monospace" />

            <TextView
                android:id="@+id/etDisplayDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:padding="10dp"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:typeface="monospace"
                android:textColor="@color/gold"/>

                <EditText
                    android:id="@+id/etContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="20"
                    android:padding="10dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColor="@color/gold"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:typeface="monospace"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="20"
                    android:padding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:typeface="monospace"
                    android:textColor="@color/gold"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:textColor="@color/gold"
                    android:ems="20"
                    android:padding="10dp"
                    android:hint="@string/password"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:typeface="monospace"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/etPasswordRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:textColor="@color/gold"
                    android:ems="20"
                    android:padding="10dp"
                    android:hint="@string/passwordRepeat"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:typeface="monospace"
                    android:autofillHints="" />


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="65dp"
            android:background="@color/black"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:typeface="monospace"
            android:onClick="onClickCancel"/>

        <Button
            android:id="@+id/btRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:background="@color/black"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:typeface="monospace"
            android:onClick="onClickRegister"/>

        <ProgressBar
            android:id="@+id/pbRegister"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progress"/>

    </LinearLayout>

</LinearLayout>
