<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    tools:context="com.alicearmstrong.coffeysloyaltyprojectv1.ResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="181dp"
            android:layout_height="132dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:src="@mipmap/coffeyslogo" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:ems="10"
            android:paddingBottom="20dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tvForgotPasswordInfo"
            android:layout_width="fill_parent"
            android:layout_height="104dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:ems="10"
            android:padding="20dp"
            android:text="@string/forgotPasswordInfo"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace" />


            <EditText
                android:id="@+id/etEmailReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/gold"
                android:textStyle="bold|italic"
                android:typeface="monospace"
                android:textSize="15sp"/>

        <Button
            android:id="@+id/btResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:onClick="onClickResetPassword"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="5dp"
            android:text="@string/resetPassword"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:typeface="monospace" />


        <Button
            android:id="@+id/btReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:background="@null"
            android:onClick="onClickReturn"
            android:paddingTop="5dp"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
